--- a/style.css
+++ b/style.css
@@ -1,34 +1,38 @@
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0 ;
+    font-family: Bebas Neue, sans-serif;
+    margin: 0;
     padding: 0;
 }
+
 .container{
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: darkred;
+    background: black (rgb(36, 36, 93), darkred);
+    color: white;
 }
 
 .titulo-principal{
+    font-family: Cormorant, serif;
     text-align: center;
-    font-size: 2em;
-    margin-bottom: 20px;
+    font-weight: 100;
+    text-shadow: 2px 2px 4px black;
+    margin-bottom: 30px;
 }
 
 .banner{
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .banner img{
-    max-width: 100%;
+    max-width: 90%;
     height: auto;
-    border-radius: 15px;
-    box-shadow: 0 0 10px black;
+    border-radius: 5%;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
 }
 
-.elenco{
+.atores{
     display: flex;
     justify-content: space-around;
     margin-bottom: 30px;
@@ -36,15 +40,14 @@ body{
 
 .ator{
     text-align: center;
+    text-shadow: 2px 2px 4px black;
 }
 
 .ator img{
     width: 100px;
     height: 150px;
     object-fit: cover;
-    border-radius: 15px;
-}
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
 
-.titulo-elenco{
-    text-align: center;
 }
