--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     font-family: Bebas Neue, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: darkred;
+    box-shadow: 0 0 15px black;
 }
 
 .container{
@@ -9,7 +11,7 @@ body{
     margin: 0 auto;
     padding: 20px;
     background: black (rgb(36, 36, 93), darkred);
-    color: white;
+    color:white;
 }
 
 .titulo-principal{
@@ -51,3 +53,23 @@ body{
     box-shadow: 5px 5px 10px rgb(0, 0, 0);
 
 }
+.ator:hover img{
+    transform: scale(1.25);
+}
+
+.titulo-sinopse {
+    font-size: 33px;
+    text-align: center;
+}
+.site {
+    color: white;
+    font-family:Bebas Neue, sans-serif;
+    text-align: center;
+    align-items: center;
+}
+.site img {
+ width: 70px;
+ height: auto;
+ 
+}
+
